--- a/.github/workflows/lambda_deployment.yaml
+++ b/.github/workflows/lambda_deployment.yaml
@@ -1,14 +1,12 @@
-name: CI/CD for Lambda Function
+name: Deploy Lambda Function
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  deploy:
     runs-on: ubuntu-latest
-    outputs:
-      zip-path: ${{ steps.zip.outputs.zip-path }}
 
     steps:
       - name: Checkout code
@@ -17,10 +15,10 @@ jobs:
       - name: Setup .NET 8
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '8'
 
       - name: Restore dependencies
-        run: dotnet restore ./LambdaApiCICD/LambdaApiCICD.csproj
+        run: dotnet restore LambdaApiCICD/LambdaApiCICD.csproj
 
       - name: Run tests (optional)
         run: |
@@ -28,40 +26,12 @@ jobs:
           dotnet test --no-build --verbosity normal || echo "No tests found or test project missing – continuing."
 
       - name: Publish Lambda project
-        run: dotnet publish ./LambdaApiCICD/LambdaApiCICD.csproj -c Release -o ./publish --self-contained false
-
-      - name: List contents of publish folder
-        run: |
-          echo "Checking contents of publish folder..."
-          ls -la publish
+        run: dotnet publish LambdaApiCICD/LambdaApiCICD.csproj -c Release -o ./publish --self-contained false
 
       - name: Zip publish folder
-        id: zip
         run: |
           cd publish
           zip -r ../lambda.zip .
-          if [ ! -f ../lambda.zip ]; then
-            echo "Error: lambda.zip was not created."
-            exit 1
-          fi
-          echo "zip-path=lambda.zip" >> $GITHUB_OUTPUT
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: lambda-package
-          path: lambda.zip
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: lambda-package
-          path: .
 
       - name: Upload to AWS Lambda
         uses: aws-actions/aws-cli-action@v1
