--- a/.github/workflows/lambda_deployment.yaml
+++ b/.github/workflows/lambda_deployment.yaml
@@ -55,7 +55,7 @@ jobs:
           path: .
 
       - name: Upload to AWS Lambda
-        uses: aws-actions/aws-cli-action@v2
+        uses: imehedi/actions-awscli-v2@latest
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
